# anvl

./: .gitignore  ANVL-SPEC.md  CLAUDE.md  LICENSE  README.md  calibration.json  growth_curve.json  logo.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
anvl/: __init__.py  __main__.py  analyzer.py  branding.py  calibration.py  cli.py  config.py  handoff.py  hooks.py  monitor.py  parser.py  report.py  sessions.py
anvl/web/: dashboard.html  server.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_handoff.py  test_hooks.py  test_parser.py
tests/fixtures/: inflated.jsonl  malformed.jsonl  minimal.jsonl
